# png-parser

./: Cargo.toml  README.md  png_parser.pyi  pyproject.toml
pkg/: README.md  package-lock.json  package.json  png-parser_bg.wasm  png_parser.d.ts  png_parser.js  png_parser_bg.wasm  png_parser_bg.wasm.d.ts
src/: chunk.rs  chunk_type.rs  lib.rs  main.rs  png.rs
