[package]
name = "png_parser"
version = "0.1.0"
edition = "2021"
authors = ["Pranjal Panging"]
description = "A tool to inspect, strip metadata, and hide messages in PNG files."

[lib]
name = "png_parser"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crc = "3.0"
thiserror = "1.0"
byteorder = "1.5"

pyo3 = { version = "0.20", features = ["extension-module"] }