[package]
name = "png_parser"
version = "0.1.0"
edition = "2021"
authors = ["Pranjal Panging"]
description = "A high-performance Rust tool to hide and read secret messages in PNG files."
license = "MIT"
repository = "https://github.com/PranjalPanging/png-parser"

[lib]
name = "png_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
