[package]
name = "png_parser"
version = "0.1.7"
edition = "2021"
authors = ["Pranjal Panging"]
description = "A high-performance Rust tool to hide and read secret messages in PNG files."
license = "MIT"
repository = "https://github.com/PranjalPanging/png-parser"

[lib]
name = "png_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
crc = "3.0"
thiserror = "1.0"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.8.5"

pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
python = ["dep:pyo3"]
js = ["dep:wasm-bindgen"]
default = ["python"]

[[bin]]
name = "png-parser-cli"
path = "src/main.rs"
required-features = [] 

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1